Refactor: Java 버전 문제 해결을 위해 메소드 수정
- Java8 버전에 맞게 메소드 수정